examples/invalid/unsupported_strategy.jd
justification j {
    conclusion c is "The system is correct"
    strategy s is "Testing"
    s supports c
    evidence e is "Test results"
}
